Fix volumes from docker to enable nodemon

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
     container_name: serve
     ports:
       - "80:8080"
+    working_dir: /app
     volumes:
-      - .:/node_serve
-      - /node_serve/node_modules
+      - .:/app
+      - /app/node_modules
     command: npm run start
     depends_on: 
       - mongodb
@@ -20,8 +21,8 @@ services:
     environment: 
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
-    volumes:
-      - ./data/db:/data/db
-  es:
-    image: elasticsearch:7.6.0
-    container_name: es
+#    volumes:
+#      - ./data/db:/data/db
+#  es:
+#    image: elasticsearch:7.6.0
+#    container_name: es
