Fixed error mensagens and add validate form.

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-hook-form": "^5.0.2",
     "react-icons": "^3.9.0",
     "react-query": "^1.0.10",
     "react-scripts": "3.4.0",
